# magi-gen

./: .gitignore  AGENTS.md  AGENTS_CUSTOM.md  CHANGELOG.md  Cargo.toml  LICENSE  PLAN.md  README.md
.agents/skills/magi-gen/: SKILL.md
.agents/skills/magi-image-gen-cli/: SKILL.md
prompts/: system.md
src/: AGENTS.md  chromakey.rs  cli.rs  config.rs  import.rs  main.rs  output.rs
src/auth/: codex.rs  mod.rs  store.rs
src/providers/: codex.rs  mod.rs  openai_compatible.rs  request.rs  sse.rs
