[package]
name = "magi-image-gen-cli"
version = "0.1.0"
edition = "2024"
rust-version = "1.88.0"
publish = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "2.0"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
