[package]
name = "magi-gen"
version = "0.0.1"
edition = "2024"
rust-version = "1.88.0"
license = "MIT"
description = "Standalone image generation CLI for Codex/ChatGPT subscription OAuth and OpenAI-compatible Responses APIs"
repository = "https://github.com/magimetal/magi-gen"
keywords = ["openai", "image-generation", "cli", "codex", "chromakey"]
categories = ["command-line-utilities", "multimedia::images"]
readme = "README.md"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
rustychroma = "0.2"
image = { version = "0.25", default-features = false, features = ["png"] }
thiserror = "2.0"
url = "2.5"
urlencoding = "2.1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
